Fixing sonar identified maintainability issues